@@ -11,15 +11,20 @@
 # FOR A PARTICULAR PURPOSE.
 #
 ##############################################################################
-""" Directive handler for publication factory
+""" Directive handlers
 
-See metadirective.py
+See metadirectives.py
 
 $Id$
 """
 __docformat__ = 'restructuredtext'
 
 from zope.app.publication.requestpublicationregistry import factoryRegistry
+from zope.component.interface import provideInterface
+from zope.component.zcml import handler
+from zope.publisher.interfaces.browser import IBrowserRequest
+from zope.publisher.interfaces import IDefaultViewName
+
 
 def publisher(_context, name, factory, methods=['*'], mimetypes=['*'],
               priority=0):
@@ -33,3 +38,20 @@ def publisher(_context, name, factory, methods=['*'], mimetypes=['*'],
                 callable = factoryRegistry.register,
                 args = (method, mimetype, name, priority, factory)
                 )
+
+
+def defaultView(_context, name, for_=None, layer=IBrowserRequest):
+
+    _context.action(
+        discriminator = ('defaultViewName', for_, layer, name),
+        callable = handler,
+        args = ('registerAdapter',
+                name, (for_, layer), IDefaultViewName, '', _context.info)
+        )
+
+    if for_ is not None:
+        _context.action(
+            discriminator = None,
+            callable = provideInterface,
+            args = ('', for_)
+            )
