@@ -28,6 +28,7 @@ __docformat__ = 'restructuredtext'
 
 from zope.interface import Interface
 from zope.configuration.fields import GlobalObject, Tokens
+from zope.configuration.fields import GlobalInterface
 from zope.schema import TextLine, Int
 
 class IRequestPublicationDirective(Interface):
@@ -61,3 +62,37 @@ class IRequestPublicationDirective(Interface):
         description=(u'A priority key used to concurrent'
                      ' publication factories.'),
         required=False)
+
+
+class IDefaultViewDirective(Interface):
+    """
+    The name of the view that should be the default.
+
+    This name refers to view that should be the
+    view used by default (if no view name is supplied
+    explicitly).
+    """
+
+    name = TextLine(
+        title=u"The name of the view that should be the default.",
+        description=u"""
+        This name refers to view that should be the view used by
+        default (if no view name is supplied explicitly).""",
+        required=True
+        )
+
+    for_ = GlobalObject(
+        title=u"The interface this view is the default for.",
+        description=u"""Specifies the interface for which the view is
+        registered. All objects implementing this interface can make use of
+        this view. If this attribute is not specified, the view is available
+        for all objects.""",
+        required=False
+        )
+
+    layer = GlobalInterface(
+        title=u"The layer the default view is declared for",
+        description=u"The default layer for which the default view is "
+                    u"applicable. By default it is applied to all layers.",
+        required=False
+        )
